fix: no break on `.item-detail`

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -176,6 +176,7 @@ main {
                 height: 50%;
                 font-size: .75em;
                 letter-spacing: .05em;
+                white-space: nowrap;
             }
 
             span {
